rust/node-structuring/tests/snapshots/examples__normalize-suggestions-block-chain.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "SuggestionBlock",
      "suggestionType": "Replace",
      "content": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "new1"
              }
            }
          ]
        },
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "new2"
              }
            }
          ]
        }
      ],
      "original": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "old1"
              }
            }
          ]
        },
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "old2"
              }
            }
          ]
        }
      ]
    }
  ],
  "options": {
    "extra": {
      "structuring": [
        "normalize-suggestions"
      ]
    }
  }
}
