rust/node-structuring/tests/snapshots/examples__normalize-suggestions-block-different-status.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "SuggestionBlock",
      "suggestionType": "Delete",
      "suggestionStatus": "Accepted",
      "content": [],
      "original": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "old1"
              }
            }
          ]
        }
      ]
    },
    {
      "type": "SuggestionBlock",
      "suggestionType": "Delete",
      "suggestionStatus": "Rejected",
      "content": [],
      "original": [
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "old2"
              }
            }
          ]
        }
      ]
    }
  ],
  "options": {
    "extra": {
      "structuring": [
        "normalize-suggestions"
      ]
    }
  }
}
