rust/node-structuring/tests/snapshots/examples__normalize-suggestions-inline-adjacent-insert.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "before "
          }
        },
        {
          "type": "SuggestionInline",
          "suggestionType": "Insert",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "new1 "
              }
            },
            {
              "type": "Text",
              "value": {
                "string": "new2"
              }
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " after"
          }
        }
      ]
    }
  ],
  "options": {
    "extra": {
      "structuring": [
        "normalize-suggestions"
      ]
    }
  }
}
