rust/node-structuring/tests/snapshots/examples__normalize-suggestions-inline-preserve-metadata.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "SuggestionInline",
          "suggestionType": "Insert",
          "suggestionStatus": "Accepted",
          "feedback": "same feedback",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "new1"
              }
            },
            {
              "type": "Text",
              "value": {
                "string": "new2"
              }
            }
          ]
        }
      ]
    }
  ],
  "options": {
    "extra": {
      "structuring": [
        "normalize-suggestions"
      ]
    }
  }
}
