rust/node-structuring/tests/snapshots/examples__normalize-suggestions-inline-separated.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "SuggestionInline",
          "suggestionType": "Insert",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "new1"
              }
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " gap "
          }
        },
        {
          "type": "SuggestionInline",
          "suggestionType": "Delete",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "old"
              }
            }
          ]
        }
      ]
    }
  ],
  "options": {
    "extra": {
      "structuring": [
        "normalize-suggestions"
      ]
    }
  }
}
